--- a/android-app/AndroidManifest.xml
+++ b/android-app/AndroidManifest.xml
@@ -12,12 +12,14 @@
         android:label="@string/app_name">
 
 
-        <activity android:name=".ui.start.StartActivity" android:noHistory="true" android:theme="@style/Theme.Fringe">
+        <activity android:name=".ui.splash.SplashActivity" android:noHistory="true" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.schedule.ScheduleActivity" android:theme="@style/Theme.Fringe"/>
 
         <service android:name=".service.FringeService" />
     </application>
