--- a/android-app/pom.xml
+++ b/android-app/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>robospice-ormlite</artifactId>
             <version>1.4.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.nostra13.universalimageloader</groupId>
+            <artifactId>universal-image-loader</artifactId>
+            <version>1.8.6</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
