--- a/android-app/AndroidManifest.xml
+++ b/android-app/AndroidManifest.xml
@@ -4,15 +4,26 @@
 
     <uses-sdk android:minSdkVersion="8"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <permission android:name="com.atl.fringe.permission.MAPS_RECEIVE" android:protectionLevel="signature"/>
+
+    <uses-permission android:name="com.chipotle.ordering.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+
+    <!-- required for google maps APIV2-->
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
 
     <application
         android:name=".FringeApp"
         android:icon="@drawable/icon"
         android:label="@string/app_name">
 
+        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCpPi5cB-_r4lrR8oHZjQqCxLjLb41Dnqs"/>
 
         <activity android:name=".ui.splash.SplashActivity" android:noHistory="true" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
