--- a/android-app/AndroidManifest.xml
+++ b/android-app/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
     <application
         android:name=".FringeApp"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name">
 
