--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ android-app/target/idea-classes/com/viewpagerindicator/R$layout.class
 android-app/target
 android-app/gen
 android-app/gen-external-apklibs
+.idea/
+*.iml
