--- a/datacontract/pom.xml
+++ b/datacontract/pom.xml
@@ -12,5 +12,15 @@
     <artifactId>datacontract</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>android</groupId>
+            <artifactId>android</artifactId>
+            <version>4.3_r1</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
