--- a/android-app/AndroidManifest.xml
+++ b/android-app/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <application
         android:name=".FringeApp"
         android:hardwareAccelerated="true"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/ic_action_honecomb"
         android:label="@string/app_name">
 
         <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCpPi5cB-_r4lrR8oHZjQqCxLjLb41Dnqs"/>
