latest and greatest

--- a/android-app/AndroidManifest.xml
+++ b/android-app/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
@@ -35,6 +36,10 @@
         </activity>
 
         <activity android:name=".ui.schedule.ScheduleActivity" android:screenOrientation="portrait" android:theme="@style/Theme.Fringe"/>
+        <activity android:name=".ui.artist.ArtistsActivty" android:screenOrientation="portrait" android:theme="@style/Theme.Fringe"/>
+        <activity android:name=".ui.schedule.MyScheduleActivity" android:screenOrientation="portrait" android:theme="@style/Theme.Fringe"/>
+        <activity android:name=".ui.hive.HiveHotspotsActivity" android:screenOrientation="portrait" android:theme="@style/Theme.Fringe"/>
+        <activity android:name=".ui.venue.VenuesActivity" android:screenOrientation="portrait" android:theme="@style/Theme.Fringe"/>
 
         <service android:name=".service.FringeService" />
     </application>
